Fix Android launch and capture real screen